--- a/extension/excalidraw_host.html
+++ b/extension/excalidraw_host.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Excalidraw Host</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; img-src 'self' data: blob:; connect-src 'self'; frame-ancestors 'self';" />
+        <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; img-src 'self' data: blob:; connect-src 'self'">
     <style>
       html, body { height: 100%; margin: 0; background: #fafafa; }
       #app { height: 100%; }
